selfhost/test/typechecker/set/error_type_mismatch_item.1.out
Error at %FILE_NAME%:1:6
Type mismatch
  |  #{1, "2", 3}
          ^
Expected: Int
but instead found: String
